fixed logo paths

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                         <div class="card-content">
                             <h4 class="black-text light">FRONT-END</h4>
                             <div class="row text-center">
-                                <div class="col s4 m2"><img alt="" src="/logos/HTML5_logo_resized.svg.png" class="responsive-img logo"></div>
-                                <div class="col s4 m2"><img alt="" src="/logos/css3.svg" class="responsive-img logo"></div>
-                                <div class="col s4 m2"><img alt="" src="/logos/javascript-logo.png" class="responsive-img logo"></div>
+                                <div class="col s4 m2"><img alt="" src="logos/HTML5_logo_resized.svg.png" class="responsive-img logo"></div>
+                                <div class="col s4 m2"><img alt="" src="logos/css3.svg" class="responsive-img logo"></div>
+                                <div class="col s4 m2"><img alt="" src="logos/javascript-logo.png" class="responsive-img logo"></div>
                             </div>
                         </div>
                     </div>
@@ -92,12 +92,12 @@
                         <div class="card-content">
                             <h4 class="black-text light">DESIGN</h4>
                             <div class="row text-center">
-                                <div class="col s4 m2"><img alt="" src="/logos/photoshop-cc.svg" class="responsive-img logo"></div>
-                                <div class="col s4 m2"><img alt="" src="/logos/adobe-indesign-cs6.svg" class="responsive-img logo"></div>
-                                <div class="col s4 m2"><img alt="" src="/logos/adobe-illustrator-cc.svg" class="responsive-img logo"></div>
-                                <div class="col s4 m2"><img alt="" src="/logos/affinity-photo-available-on-the-mac-app-store.jpg" class="responsive-img logo rectangle"></div>
-                                <div class="col s4 m2"><img alt="" src="/logos/affinity-designer@2x-120920160853.png" class="responsive-img logo"></div>
-                                <div class="col s4 m2"><img alt="" src="/logos/webflow.png" class="responsive-img logo"></div>
+                                <div class="col s4 m2"><img alt="" src="logos/photoshop-cc.svg" class="responsive-img logo"></div>
+                                <div class="col s4 m2"><img alt="" src="logos/adobe-indesign-cs6.svg" class="responsive-img logo"></div>
+                                <div class="col s4 m2"><img alt="" src="logos/adobe-illustrator-cc.svg" class="responsive-img logo"></div>
+                                <div class="col s4 m2"><img alt="" src="logos/affinity-photo-available-on-the-mac-app-store.jpg" class="responsive-img logo rectangle"></div>
+                                <div class="col s4 m2"><img alt="" src="logos/affinity-designer@2x-120920160853.png" class="responsive-img logo"></div>
+                                <div class="col s4 m2"><img alt="" src="logos/webflow.png" class="responsive-img logo"></div>
                             </div>
                         </div>
                     </div>
@@ -108,9 +108,9 @@
                         <div class="card-content">
                             <h4 class="black-text light">PROJECT MANAGEMENT + PROTOTYPE </h4>
                             <div class="row text-center">
-                                <div class="col s4 m2"><img alt="" src="/logos/clickup.png" class="responsive-img logo"></div>
-                                <div class="col s4 m2"><img alt="" src="/logos/Asana_logo.svg.png" class="responsive-img logo"></div>
-                                <div class="col s4 m2"><img alt="" src="/logos/figma-1.svg" class="responsive-img logo"></div>
+                                <div class="col s4 m2"><img alt="" src="logos/clickup.png" class="responsive-img logo"></div>
+                                <div class="col s4 m2"><img alt="" src="logos/Asana_logo.svg.png" class="responsive-img logo"></div>
+                                <div class="col s4 m2"><img alt="" src="logos/figma-1.svg" class="responsive-img logo"></div>
                             </div>
                         </div>
                     </div>
@@ -121,10 +121,10 @@
                         <div class="card-content">
                             <h4 class="black-text light">OTHER</h4>
                             <div class="row text-center">
-                                <div class="col s4 m2"><img alt="" src="/logos/GitHub-Mark.png" class="responsive-img logo"></div>
-                                <div class="col s4 m2"><img alt="" src="/logos/Adobe_Premiere_Pro_Logo.svg.png" class="responsive-img logo"></div>
-                                <div class="col s4 m2"><img alt="" src="/logos/Blender_logo_no_text.svg.png" class="responsive-img logo"></div>
-                                <div class="col s4 m2"><img alt="" src="/logos/large_thumbnail.jpg" class="responsive-img logo"></div>
+                                <div class="col s4 m2"><img alt="" src="logos/GitHub-Mark.png" class="responsive-img logo"></div>
+                                <div class="col s4 m2"><img alt="" src="logos/Adobe_Premiere_Pro_Logo.svg.png" class="responsive-img logo"></div>
+                                <div class="col s4 m2"><img alt="" src="logos/Blender_logo_no_text.svg.png" class="responsive-img logo"></div>
+                                <div class="col s4 m2"><img alt="" src="logos/large_thumbnail.jpg" class="responsive-img logo"></div>
                             </div>
                         </div>
                     </div>
