--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link type="text/css" rel="stylesheet" href="css/stylesheet.css">
     <link href="http://fonts.googleapis.com/css?family=Josefin+Sans:700|Roboto:300,400,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+    <script type="text/javascript" src="js/materialize.js"></script>
+    <script type="text/javascript" src="js/scripts.js"></script>
 
 
     <!--Let browser know website is optimized for mobile-->
@@ -434,15 +436,15 @@
 
 
     <!--JavaScript at end of body for optimized loading-->
-    <script type="text/javascript " src="js/materialize.js "></script>
-    <script type="text/javascript " src="js/scripts.js "></script>
-
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script>
         $(document).ready(function() {
             $('.sidenav').sidenav();
             $('.tooltipped').tooltip()
         });
     </script>
+
 </body>
 
 </html>
