--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
                                 <div class="col s4 m2"><img alt="" src="logos/HTML5_logo_resized.svg.png" class="responsive-img logo"></div>
                                 <div class="col s4 m2"><img alt="" src="logos/css3.svg" class="responsive-img logo"></div>
                                 <div class="col s4 m2"><img alt="" src="logos/javascript-logo.png" class="responsive-img logo"></div>
+                                <div class="col s4 m2"><img alt="" src="logos/materialize.png" class="responsive-img logo"></div>
+
                             </div>
                         </div>
                     </div>
@@ -108,7 +110,7 @@
                 <div class="col s12 l6">
                     <div class="card">
                         <div class="card-content">
-                            <h4 class="black-text light">PROJECT MANAGEMENT + PROTOTYPE </h4>
+                            <h4 class="black-text light">MANAGEMENT + PROTOTYPE</h4>
                             <div class="row text-center">
                                 <div class="col s4 m2"><img alt="" src="logos/clickup.png" class="responsive-img logo"></div>
                                 <div class="col s4 m2"><img alt="" src="logos/Asana_logo.svg.png" class="responsive-img logo"></div>
