--- a/art.html
+++ b/art.html
@@ -130,6 +130,14 @@
         </footer>
 </main>
 
-</html>
-
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<script>
+    $(document).ready(function() {
+        $('.sidenav').sidenav();
+        $('.tooltipped').tooltip()
+    });
+</script>
 </body>
+
+</html>
