about me update

--- a/index.html
+++ b/index.html
@@ -61,13 +61,20 @@
                         <div class="portrait">
                             <img class="imgportrait" src="assets/k8web.jpg" alt="Kate">
                         </div>
-                        <p> I am an aspiring front-end web developer, interested in uncovering web-based and digital solutions. I feel strongly in free, clear, and open communications, and that digital design and successful web development can provide the
-                            most direct route to a relationship between user and product.</p>
-                        <p>My first career as a public art project manager has provided me with a background of delivering organized and timely results, and working with projects diverse in scale, concept, and setting. I am a strong collaborator and comfortable
-                            with a no-glory-given, behind-the scenes producer role. I’m most interested in pursuing team-based opportunities and projects.</p>
-                        <p>Committed to ongoing education, I have supplemented my BA/MA degrees with a full-stack bootcamp at Academy Pittsburgh, and most recently a front-end focused bootcamp with Moms Can: Code. I hope to work with future teammates who
-                            understand the value of knowledge-sharing and continued learning.</p>
-                        <p>I am a non-media artist focused on new-media expression. Using time-based constructs, I use found digital objects and footage to create new narratives.</p>
+
+                        <p>I am a junior front-end web developer with a past life as a public art project manager and a Master's of Arts Management. <br> <br> Although I am shifting to a dev role, I’m a natural born project lead and manager that strives
+                            to help others better themselves and their teams. My strongest attributes are an awareness of sociology, aesthetics, and user intuitions and expectations. In my first career, I’d project managed a variety of city- and county-wide
+                            public art and social practice projects for the Office of Public Arts (Pittsburgh, PA), with partners and clients including governmental agencies, community groups, private developers, and more. These projects consisted of
+                            collaborating with citizens, politicians, stakeholders, artists, vendors, and policy while keeping the objectives, budget, timing, and human emotions in balance. Projects spanned from months to years, from object-based public
+                            artworks and their maintenance to ideating, soliciting grant funding for, and establishing programming and social practice projects. My favorite partnership was with the Pittsburgh International Airport where I obtained seed
+                            funding for and initiated performing arts program that is ongoing and currently scalable. I also initiated program architecture and funding for an artist-in-residence program, as well as several temporary placemaking opportunities
+                            for local artists. <br><br> Though I’ve never held an agency or in-house product team role, I am certainly no stranger to web design, strategy, and development. In 2012 I provided discovery, ideation, user testing, design,
+                            and development management for Western PA’s central repository for artists: Pittsburgh Artist Registry (see case study below) In addition, I’ve assisted Pittsburgh area artists with their web presence and outreach by consulting
+                            them in all facets of internet media, including their online portfolios. In 2018, I decided to pursue my passion for accessible information sharing and was accepted into a development bootcamp at Academy Pittsburgh. Through
+                            a variety of freelance web and design projects, I decide to continue learning with MomsCanCode School where I studied human-centered design and focused more on front-end development.
+                            <br><br> I’m also a practicing non-media/new-media artist, and my arts CV can be found below. This portion and other sections of my website are under construction while I prioritize freelance web development and design projects.
+                        </p>
+
                     </div>
                 </div>
             </div>
