--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <!-----END  NAVIGATION-------->
 
     <main class="container">
+
         <section id="about" class="about">
             <div class="row">
                 <div class="col m12 l12">
@@ -84,6 +85,7 @@
                 </div>
             </div>
         </section>
+        </div>
 
         <section id="skills">
             <h2>SKILLS</h2>
