broke pages apart, updated header, updated resume

--- a/art.html
+++ b/art.html
@@ -26,11 +26,11 @@
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="index.html#about">ABOUT</a></li>
-                    <li><a href="2019_HANSEN_Resume.pdf" type="pdf" target="_blank">RESUME</a></li>
-                    <li><a href="index.html#webdesign">WEB + DESIGN</a></li>
-                    <li><a href="index.html#blogsnworkshops">WRITING + WKSHPS</a></li>
-                    <li><a href="art.html">ART</a></li>
+                    <li><a href="index.html">ABOUT</a></li>
+                    <li><a href="HANSEN_Kate_resume.pdf" type="pdf" target="_blank">RESUME</a></li>
+                    <li><a href="worksamples.html">Worksamples</a></li>
+                    <li><a href="writing.html">WRITING + WKSHPS</a></li>
+                    <li><a href="artlanding.html">ART</a></li>
                     <li><a href="index.html#contact">CONTACT</a></li>
                 </ul>
             </div>
@@ -38,11 +38,11 @@
 
         <ul class="sidenav" id="mobile-demo">
             <li><a href="index.html">HOME</a></li>
-            <li><a href="index.html#about">ABOUT</a></li>
-            <li><a href="2019_HANSEN_Resume.pdf" type="pdf" target="_blank">RESUME</a></li>
-            <li><a href="index.html#webdesign">WEB + DESIGN</a></li>
-            <li><a href="index.html#blogsnworkshops">WRITING + WKSHPS</a></li>
-            <li><a href="art.html">ART</a></li>
+            <li><a href="index.html">ABOUT</a></li>
+            <li><a href="HANSEN_Kate_resume.pdf" type="pdf" target="_blank">RESUME</a></li>
+            <li><a href="worksamples.html">WEB + DESIGN</a></li>
+            <li><a href="writing.html">WRITING + WKSHPS</a></li>
+            <li><a href="artlanding.html">ART</a></li>
             <li><a href="index.html#contact">CONTACT</a></li>
         </ul>
 
