--- a/worksamples.html
+++ b/worksamples.html
@@ -47,10 +47,108 @@
         <i class="fas fa-arrow-up"><p class ="top">top</p></i>
     </a>
 
+    <section id="webdesign" class="webdesign">
+        <div class="row">
+            <h3> Minimum Viable Products</h3>
+            <!--nutremidy-->
+            <div class="col s12 m12 l12 worksample-heading">
+                <h5>Tracking App Excercise (First Page)</h5>
+            </div>
+            <div class="col s12 m6 l6">
+                <p><span class="boldtype">Description:</span> Rethinking a meal tracking app, with the goal of adding a meal with less clicks than current version. Used a floating JavaScript button to eliminate a page on the current interface.</p>
+            </div>
+            <div class="col s12 m6 l6">
+                <p><span class="boldtype">Tools used:</span> Figma for prototyping, HTML, CSS, JavaScript. Hosted on GitHub.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="worksample-imgcontainer">
+                <img class="responsive-img worksample-image" src="assets/figmaNU.png">
+                <img class="responsive-img worksample-image" src="assets/NUtest.png">
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="col s12 m5 l4">
+                <a class="buttonlink-worksamples" href="https://k8hansen.github.io/NUtest/" target="_blank">
+                    <div class="linkbutton">View Site</div>
+                </a>
+            </div>
+            <div class="col s12 m5 l4">
+                <a class="buttonlink-worksamples" href="https://www.figma.com/proto/XuXMGsGsEijondVg3ZfJHE/NUtest?node-id=2%3A2&scaling=scale-down" target="_blank">
+                    <div class="linkbutton">Prototype</div>
+                </a>
+            </div>
+            <div class="col s12 m5 l4">
+                <a class="buttonlink-worksamples" href="https://github.com/k8hansen/NUtest" target="_blank">
+                    <div class="linkbutton">Repo</div>
+                </a>
+            </div>
+        </div>
+
+        <!--Grantsearch-->
+        <div class="col s12 m12 l12 worksample-heading">
+            <h5>Tracking App Excercise (First Page)</h5>
+        </div>
+        <div class="col s12 m6 l6">
+            <p><span class="boldtype">Description:</span> Rethinking a meal tracking app, with the goal of adding a meal with less clicks than current version. Used a floating JavaScript button to eliminate a page on the current interface.</p>
+        </div>
+        <div class="col s12 m6 l6">
+            <p><span class="boldtype">Tools used:</span> Figma for prototyping, HTML, CSS, JavaScript. Hosted on GitHub.</p>
+        </div>
+        </div>
+        <div class="row">
+            <div class="worksample-imgcontainer">
+                <img class="responsive-img worksample-image" src="assets/figmaNU.png">
+                <img class="responsive-img worksample-image" src="assets/NUtest.png">
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="col s12 m5 l4">
+                <a class="buttonlink-worksamples" href="https://k8hansen.github.io/NUtest/" target="_blank">
+                    <div class="linkbutton">View Site</div>
+                </a>
+            </div>
+            <div class="col s12 m5 l4">
+                <a class="buttonlink-worksamples" href="https://www.figma.com/proto/XuXMGsGsEijondVg3ZfJHE/NUtest?node-id=2%3A2&scaling=scale-down" target="_blank">
+                    <div class="linkbutton">Prototype</div>
+                </a>
+            </div>
+            <div class="col s12 m5 l4">
+                <a class="buttonlink-worksamples" href="https://github.com/k8hansen/NUtest" target="_blank">
+                    <div class="linkbutton">Repo</div>
+                </a>
+            </div>
+        </div>
+        </div>
+
+        <div class="row">
+            <div class="col s12 m12 l12">
+                <h3>Production/Project Management</h3>
+                <div class="col s12 m12 l12">
+
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col s12 m12 l12">
+                <h3>Other</h3>
+                <div class="col s12 m12 l12">
+
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
 
+
+
+
+    <!--
 
     <!--WEBAND DESIGN-->
     <section id="webdesign">
