updated workstamples and background

--- a/worksamples.html
+++ b/worksamples.html
@@ -19,7 +19,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
-<body>
+<body class="worksample-body">
     <nav>
         <div class="nav-wrapper" id="top">
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
@@ -63,8 +63,8 @@
         </div>
         <div class="row">
             <div class="worksample-imgcontainer">
-                <img class="responsive-img worksample-image" src="assets/figmaNU.png">
-                <img class="responsive-img worksample-image" src="assets/NUtest.png">
+                <img class="responsive-img worksample-image materialboxed" src="assets/figmaNU.png">
+                <img class="responsive-img worksample-image materialboxed" src="assets/NUtest.png">
             </div>
 
         </div>
@@ -88,50 +88,119 @@
 
         <!--Grantsearch-->
         <div class="col s12 m12 l12 worksample-heading">
-            <h5>Tracking App Excercise (First Page)</h5>
+            <h5>Grantsearch</h5>
         </div>
-        <div class="col s12 m6 l6">
-            <p><span class="boldtype">Description:</span> Rethinking a meal tracking app, with the goal of adding a meal with less clicks than current version. Used a floating JavaScript button to eliminate a page on the current interface.</p>
+        <div class="row">
+            <div class="col s12 m6 l6">
+                <p><span class="boldtype">Description:</span> The goal of this project was to create a minimum viable product based on research about and surveying target audience. The end product was a simple grant searching tool, as demonstrated in this
+                    MVP.
+                </p>
+            </div>
+            <div class="col s12 m6 l6">
+                <p><span class="boldtype">Tools used:</span> Figma for prototyping, HTML, CSS, JavaScript. Hosted on GitHub. Additional unpublished versions including work in Node.js, JQuery, SQLite, and Ruby on Rails.</p>
+            </div>
+            <div class="col s12 m6 l6">
+                <p><span class="boldtype">Role:</span> My role on the team was Team Lead, prototyping, JavaScripter, and general code cleanup.</p>
+            </div>
         </div>
-        <div class="col s12 m6 l6">
-            <p><span class="boldtype">Tools used:</span> Figma for prototyping, HTML, CSS, JavaScript. Hosted on GitHub.</p>
-        </div>
+
+        <div class="row">
+            <div class="worksample-imgcontainer">
+                <img class="responsive-img worksample-image materialboxed" src="assets/grantsearch1.png">
+                <img class="responsive-img worksample-image materialboxed" src="assets/grantsearch2.png">
+            </div>
         </div>
         <div class="row">
             <div class="worksample-imgcontainer">
-                <img class="responsive-img worksample-image" src="assets/figmaNU.png">
-                <img class="responsive-img worksample-image" src="assets/NUtest.png">
+                <img class="responsive-img worksample-image materialboxed" src="assets/grantsearch3.png">
+                <img class="responsive-img worksample-image materialboxed" src="assets/grantsearch4.png">
             </div>
-
         </div>
         <div class="row">
-            <div class="col s12 m5 l4">
-                <a class="buttonlink-worksamples" href="https://k8hansen.github.io/NUtest/" target="_blank">
+            <div class="col s12 m5 l3">
+                <a class="buttonlink-worksamples" href="https://smcinelly.github.io/Grantsearch/" target="_blank">
                     <div class="linkbutton">View Site</div>
                 </a>
             </div>
-            <div class="col s12 m5 l4">
-                <a class="buttonlink-worksamples" href="https://www.figma.com/proto/XuXMGsGsEijondVg3ZfJHE/NUtest?node-id=2%3A2&scaling=scale-down" target="_blank">
-                    <div class="linkbutton">Prototype</div>
+            <div class="col s12 m5 l3">
+                <a class="buttonlink-worksamples" href="https://youtu.be/5tFHrpJTk9o" target="_blank">
+                    <div class="linkbutton">Demo Video</div>
                 </a>
             </div>
-            <div class="col s12 m5 l4">
-                <a class="buttonlink-worksamples" href="https://github.com/k8hansen/NUtest" target="_blank">
+            <div class="col s12 m5 l3">
+                <a class="buttonlink-worksamples" href="https://www.figma.com/file/SXc2QSO0WKOF0MRKFyMeF8UY/Grantsearch-Wireframe" target="_blank">
+                    <div class="linkbutton">Wireframe</div>
+                </a>
+            </div>
+            <div class="col s12 m5 l3">
+                <a class="buttonlink-worksamples" href="https://github.com/smcinelly/Grantsearch" target="_blank">
                     <div class="linkbutton">Repo</div>
                 </a>
             </div>
         </div>
         </div>
+    </section>
 
+    <!--Production/Projectmanagement-->
+    <section class="production">
         <div class="row">
-            <div class="col s12 m12 l12">
-                <h3>Production/Project Management</h3>
-                <div class="col s12 m12 l12">
-
-                </div>
+            <h3 class="worksample-heading"> Project Management + Production</h3>
+        </div>
+        <div class="col s12 m12 l12">
+            <h5>Grantsearch</h5>
+        </div>
+        <div class="row">
+            <div class="col s12 m6 l6">
+                <p><span class="boldtype">Description:</span> The goal of this project was to create a minimum viable product based on research about and surveying target audience. The end product was a simple grant searching tool, as demonstrated in this
+                    MVP.
+                </p>
+            </div>
+            <div class="col s12 m6 l6">
+                <p><span class="boldtype">Tools used:</span> Figma for prototyping, HTML, CSS, JavaScript. Hosted on GitHub. Additional unpublished versions including work in Node.js, JQuery, SQLite, and Ruby on Rails.</p>
+            </div>
+            <div class="col s12 m6 l6">
+                <p><span class="boldtype">Role:</span> My role on the team was Team Lead, prototyping, JavaScripter, and general code cleanup.</p>
             </div>
         </div>
 
+        <div class="row">
+            <div class="worksample-imgcontainer">
+                <img class="responsive-img worksample-image materialboxed" src="assets/grantsearch1.png">
+                <img class="responsive-img worksample-image materialboxed" src="assets/grantsearch2.png">
+            </div>
+        </div>
+        <div class="row">
+            <div class="worksample-imgcontainer">
+                <img class="responsive-img worksample-image materialboxed" src="assets/grantsearch3.png">
+                <img class="responsive-img worksample-image materialboxed" src="assets/grantsearch4.png">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col s12 m5 l3">
+                <a class="buttonlink-worksamples" href="https://smcinelly.github.io/Grantsearch/" target="_blank">
+                    <div class="linkbutton">View Site</div>
+                </a>
+            </div>
+            <div class="col s12 m5 l3">
+                <a class="buttonlink-worksamples" href="https://youtu.be/5tFHrpJTk9o" target="_blank">
+                    <div class="linkbutton">Demo Video</div>
+                </a>
+            </div>
+            <div class="col s12 m5 l3">
+                <a class="buttonlink-worksamples" href="https://www.figma.com/file/SXc2QSO0WKOF0MRKFyMeF8UY/Grantsearch-Wireframe" target="_blank">
+                    <div class="linkbutton">Wireframe</div>
+                </a>
+            </div>
+            <div class="col s12 m5 l3">
+                <a class="buttonlink-worksamples" href="https://github.com/smcinelly/Grantsearch" target="_blank">
+                    <div class="linkbutton">Repo</div>
+                </a>
+            </div>
+        </div>
+        </div>
+    </section>
+
+    <section class="other">
         <div class="row">
             <div class="col s12 m12 l12">
                 <h3>Other</h3>
@@ -148,144 +217,25 @@
 
 
 
-    <!--
-
-    <!--WEBAND DESIGN-->
-    <section id="webdesign">
-        <h2>WEB + DESIGN</h2>
-        <div class="row">
-            <!--BANTU-->
-            <div class="col s12 m4 l3">
-                <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="assets/placeholder.jpg">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">
-                            Somali Bantu
-                            <i class="material-icons right">more_vert</i>
-                        </span>
-                        <p><a href="#">Under Construction</a></p>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">
-                                Freelance Work
-                                
-                            <i class="material-icons right">close</i>
-                            <p>2019</p>
-                        </span>
-
-                        <p>Web experience for client Lindsey Scherloum, documenting her work as artist-in-residence with the Somali Bantu refugee community in Pittsburgh. <br><br> MVP Launch August 2019. <br><br> Designed in Webflow.</p>
-                    </div>
-                </div>
-            </div>
-
-            <!--Food Candle-->
-            <div class="col s12 m4 l3">
-                <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="assets/grantsearch.jpg">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Grantsearch MVP<i class="material-icons right">more_vert</i></span>
-                        <p><a href="https://smcinelly.github.io/Grantsearch/">View MVP</a></p>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">MVP Excercise<i class="material-icons right">close</i></span>
-                        <p>Moms Can Code School, 2019</p>
-                        <p>Team project with the mission to work with a real client to uncover a problem and devise a website or app solution. Our client was an online grant accelerator training program, and we created Grantsearch as a way to drive traffic
-                            to their site. I served as Team Lead and backend build which was eventually simplified to just a framework on HTML/CSS/JavaScript. Our team executed a human-centered design process to plan, ideate, and build.</p>
-                        <p><a href="https://github.com/smcinelly/Grantsearch">View code on Github</a></p>
-                        <p><a href="https://www.youtube.com/watch?v=5tFHrpJTk9o&feature=youtu.be">View Training Video</a></p>
-                        <p><a href="https://smcinelly.github.io/Grantsearch/">View Site</a></p>
-                        <p><a href="https://www.figma.com/file/SXc2QSO0WKOF0MRKFyMeF8UY/Genaccelerator-Wireframe?node-id=1%3A5">View Wireframe</a></p>
-
-                    </div>
-                </div>
-            </div>
-
-            <div class="col s12 m4 l3">
-                <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="assets/foodcandle.jpg">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">HTML EMAIL<i class="material-icons right">more_vert</i></span>
-                        <p><a href="https://codepen.io/k8hansen/pen/ZZxdKz">View on Codepen</a></p>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">HTML EMAIL<i class="material-icons right">close</i></span>
-                        <p>Moms Can Code School, 2019</p>
-                        <p>Co-designed with Stephanie McInelly. This was a bootcamp assignment to create a fake html newsletter using pair programming processes. The goal of the assigment was to learn how to create an HTML email with css inline, and to learn
-                            how to work with a collaborator to pair program.</p>
-                        <p>The concept of this newsletter was all food-scented candle-related news, an nonsensical response to somber headlines and newsletters.</p>
-                    </div>
-                </div>
-            </div>
 
 
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('.sidenav').sidenav();
+            $('.tooltipped').tooltip()
+        });
 
-            <!--Authentic Grace-->
-            <div class="col s12 m4 l3">
-                <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="assets/authenticgracethumb.jpg">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">
-                            Authentic Grace
-                            <i class="material-icons right">more_vert</i>
-                        </span>
-                        <p><a href="https://k8hansen.github.io/authenticgrace/">View the Project</a></p>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">
-                            Authentic Grace Ecommerce
-                            <i class="material-icons right">close</i>
-                        </span>
-                        <p>Authentic Grace</p>
-                        <p>2019</p>
+        document.addEventListener('DOMContentLoaded', function() {
+            var elems = document.querySelectorAll('.materialboxed');
+            var instances = M.Materialbox.init(elems, options);
+        });
 
-                        <p>Pair Programmed with Stephanie McInelly. This project was a bootcamp excercise to design an MVP for a small brick-and-morter store seeking to expand into online sales. Built homepage, product section, and product feature pages.
-                        </p> <br>
-                        <a href="https://www.figma.com/file/Ox8mPMkwBrrz0915VaNH1vUM/AUTHENTIC-GRACE-WIREFRAME?node-id=0%3A1">View Wireframe</a>
-
-                    </div>
-                </div>
-            </div>
-
-            <!--Pittsburgh Artist Registry-->
-            <div class="col s12 m4 l3">
-                <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="assets/registry.jpg">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">
-                            Pittsburgh Artist Registry
-                            <i class=" material-icons right">more_vert</i>
-                        </span>
-                        <p><a href="https://www.pittsburghartistregistry.org/ ">Visit</a></p>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">
-                            Card Title
-                            <i class="material-icons right ">close</i>
-                        </span>
-                        <p>Here is some more information about this product that is only revealed once clicked on.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-        <script>
-            $(document).ready(function() {
-                $('.sidenav').sidenav();
-                $('.tooltipped').tooltip()
-            });
-        </script>
+        $(document).ready(function() {
+            $('.materialboxed').materialbox();
+        });
+    </script>
 
     </section>
 </body>
